--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -20,20 +20,11 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install Dependencies
-        run: |
-          if [ -f "package-lock.json" ]; then
-            npm ci
-          else
-            npm install
-          fi
-
-      - name: Ensure ESLint is Installed
-        run: npx eslint --version || npm install --global eslint
+      - name: Install ESLint Globally
+        run: npm install -g eslint
 
       - name: Run ESLint
-        run: npx eslint . --format json --output-file eslint-report.json
-        continue-on-error: true
+        run: eslint . --format json --output-file eslint-report.json || true
 
       - name: Upload ESLint Report
         uses: actions/upload-artifact@v4
