--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -23,11 +23,20 @@ jobs:
       - name: Install ESLint Globally
         run: npm install -g eslint
 
+      - name: Debug ESLint
+        run: npx eslint --debug "**/*.js" || true
+
       - name: Run ESLint
-        run: eslint . --format json --output-file eslint-report.json || true
+        run: |
+          npx eslint "**/*.js" --format json --output-file eslint-report.json || true
+
+      - name: Check if ESLint report exists
+        run: test -f eslint-report.json && echo "ESLint report found." || echo "No ESLint report generated."
 
       - name: Upload ESLint Report
+        if: success() || failure()  # Upload even if ESLint failed
         uses: actions/upload-artifact@v4
         with:
           name: eslint-report
           path: eslint-report.json
+          if-no-files-found: ignore  # Prevents workflow failure if no report is generated
