--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,4 +1,4 @@
-name: ESLint Code Analysis
+name: GitHub CodeQL Analysis
 
 on:
   push:
@@ -9,8 +9,14 @@ on:
       - main
 
 jobs:
-  eslint:
+  analyze:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
+      actions: read
+      contents: read
+      id-token: write
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -18,19 +24,19 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '18'
 
-      - name: Install ESLint and Stylistic Plugin
-        run: npm install -g eslint @stylistic/eslint-plugin-js
+      - name: Install ESLint and Dependencies
+        run: |
+          npm install --save-dev eslint @stylistic/eslint-plugin-js
 
       - name: Run ESLint
         run: |
           npx eslint "**/*.js" --format json --output-file eslint-report.json || true
 
       - name: Upload ESLint Report
-        if: success() || failure()
         uses: actions/upload-artifact@v4
         with:
           name: eslint-report
           path: eslint-report.json
-          if-no-files-found: ignore
+          if-no-files-found: warn
